--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,9 +1,11 @@
 <html>
-<head><title>Ospedale di Cesena</title></head>
-<body>
-<h1>Ospedale di Cesena</h1>
-<p>Visualizza gli <a href= "./">appuntamenti disponibili</a></p>
-<p>Elenco <a href= "./">prenotazioni effettuate</a></p>
-<p>Hai bisogno di aiuto? <a href= "./">contatti</a></p>
-</body>
+    <head>
+        <title>Ospedale di Cesena</title>
+    </head>
+    <body>
+        <h1>Ospedale di Cesena</h1>
+        <p>Visualizza gli <a href= "./">appuntamenti disponibili</a></p>
+        <p>Elenco <a href= "./">prenotazioni effettuate</a></p>
+        <p>Hai bisogno di aiuto? <a href= "./">contatti</a></p>
+    </body>
 </html>
