--- a/src/html/appuntamenti.html
+++ b/src/html/appuntamenti.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <p>Cardiologo<br></p>
-        <p>Dietolog<br></p>
+        <p>Dietologo<br></p>
         <p>Dermatologo<br></p>
         <p>Ginecologo<br></p>
         <p>Neurologo<br></p>
