--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,6 +7,6 @@
         <p><font size="6" color="#006400">Elenco dei servizi</font></p>
         <p>Visualizza gli <a href= "./appuntamenti.html">appuntamenti disponibili</a></p>
         <p>Elenco <a href= "./prenotazioni.html">prenotazioni effettuate</a></p>
-        <p>Hai bisogno di aiuto? <a href= "./">contatti</a></p>
+        <p>Hai bisogno di aiuto? <a href= "./contatti.html">contatti</a></p>
     </body>
 </html>
