add download and logout section

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,5 +8,14 @@
         <p>Visualizza gli <a href= "./appuntamenti.html">appuntamenti disponibili</a></p>
         <p>Elenco <a href= "./prenotazioni.html">prenotazioni effettuate</a></p>
         <p>Hai bisogno di aiuto? <a href= "./contatti.html">contatti</a></p>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <p>Download: <a href="../res/info.pdf" download="info.pdf">info.pdf</a></p>
+        <form action="/logout" method="POST">
+            <p><a href= "/logout.html">Effettua il logout</a></p>
+        </form>
     </body>
 </html>
